--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,4 +55,7 @@
 body {
 	background: var(--background);
 	color: var(--foreground);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
